DSYS-81 - attempt to fix ipad breadcrumb overflow

--- a/src/main/webapp/bundles/shared/journeyProgressBar/v3/less/journeyProgressBar.less
+++ b/src/main/webapp/bundles/shared/journeyProgressBar/v3/less/journeyProgressBar.less
@@ -80,7 +80,7 @@
       }
 
       div > span {
-        margin-left: 19px;
+        margin-left: 18px;
         position: relative;
         top: 9px;
         float: left;
